Fix contained process session cleanup (#391)
* fix: complete contained process cleanup

* test: accept platform line endings

* fix: recover IDE JNA path for contained processes