@@ -2,6 +2,9 @@ package com.aspix2k.affected.build
 
 import com.intellij.execution.configurations.GeneralCommandLine
 import com.intellij.openapi.util.SystemInfoRt
+import com.sun.jna.Library
+import com.sun.jna.Native
+import com.sun.jna.Platform
 import java.io.ByteArrayInputStream
 import java.io.ByteArrayOutputStream
 import java.io.DataInputStream
@@ -14,6 +17,7 @@ import java.net.SocketTimeoutException
 import java.nio.file.Files
 import java.nio.file.Path
 import java.nio.file.StandardCopyOption
+import java.util.concurrent.CompletableFuture
 import java.util.concurrent.CountDownLatch
 import java.util.concurrent.TimeUnit
 import java.util.concurrent.atomic.AtomicBoolean
@@ -75,6 +79,31 @@ class ContainedProcessTest {
             assertEquals(0, process.exitValue(), output)
         } finally {
             process.takeIf(Process::isAlive)?.destroyForcibly()
+            directory.toFile().deleteRecursively()
+        }
+    }
+
+    @Test
+    fun `the supervisor uses the IDE JNA path when the startup property is unavailable`() {
+        val directory = createTempDirectory("contained-jna-path")
+        val property = "jna.boot.library.path"
+        val original = System.getProperty(property)
+        var contained: ContainedProcess? = null
+
+        try {
+            System.clearProperty(property)
+            contained = ContainedProcess.prepare(
+                GeneralCommandLine(listOf(java(), "-version")).withWorkDirectory(directory.toFile()),
+            )
+            contained.start()
+
+            assertTrue(contained.process.waitFor(10, TimeUnit.SECONDS))
+            assertEquals(0, contained.process.exitValue())
+            assertTrue(contained.close())
+        } finally {
+            contained?.request()
+            contained?.await()
+            if (original == null) System.clearProperty(property) else System.setProperty(property, original)
             directory.toFile().deleteRecursively()
         }
     }
@@ -155,10 +184,126 @@ class ContainedProcessTest {
         }
     }
 
+    @Test
+    fun `normal completion closes output inherited by a background child`() {
+        val directory = createTempDirectory("contained-background-output")
+        val pid = directory.resolve("child.pid")
+        val contained = ContainedProcess.prepare(
+            commandLine(
+                directory,
+                InheritedOutputChildSpawner::class.java.name,
+                pid.toString(),
+                testJavaClassPathArgument(directory),
+            ),
+        )
+        val output = CompletableFuture.supplyAsync {
+            contained.process.inputStream.bufferedReader().readText()
+        }
+        var child: ProcessHandle? = null
+
+        try {
+            contained.start()
+            assertTrue(contained.process.waitFor(5, TimeUnit.SECONDS))
+            assertEquals("root finished${System.lineSeparator()}", output.get(2, TimeUnit.SECONDS))
+            assertTrue(contained.close())
+            child = ProcessHandle.of(Files.readString(pid).trim().toLong()).orElseThrow()
+            assertTrue(child.isAlive, "Normal completion terminated the background child")
+        } finally {
+            contained.request()
+            contained.await()
+            child?.takeIf(ProcessHandle::isAlive)?.destroyForcibly()
+            directory.toFile().deleteRecursively()
+        }
+    }
+
+    @Test
+    fun `cancellation terminates a child in another group of the owned session`() {
+        if (SystemInfoRt.isWindows) return
+        val directory = createTempDirectory("contained-session-child")
+        val pid = directory.resolve("child.pid")
+        val contained = ContainedProcess.prepare(
+            jnaCommandLine(
+                directory,
+                DifferentGroupChildSpawner::class.java.name,
+                pid.toString(),
+            ),
+        )
+        var child: ProcessHandle? = null
+
+        try {
+            contained.start()
+            val deadline = System.nanoTime() + TimeUnit.SECONDS.toNanos(5)
+            while (child == null && System.nanoTime() < deadline) {
+                child = runCatching {
+                    ProcessHandle.of(Files.readString(pid).substringBefore(',').toLong()).orElse(null)
+                }.getOrNull()
+                if (child == null) Thread.sleep(10)
+            }
+            val containedChild = checkNotNull(child) { "The separate process group did not start" }
+            val identity = Files.readString(pid).split(',').map(String::toLong)
+            assertTrue(containedChild.isAlive)
+            assertEquals(contained.process.pid(), identity[1], "The child escaped the owned session")
+            assertEquals(containedChild.pid(), identity[2], "The child did not establish a separate process group")
+
+            contained.request()
+            assertTrue(contained.await(), "The owned session was not proven empty")
+            assertFalse(containedChild.isAlive, "Cancellation left an owned session member alive")
+        } finally {
+            contained.request()
+            contained.await()
+            child?.takeIf(ProcessHandle::isAlive)?.destroyForcibly()
+            directory.toFile().deleteRecursively()
+        }
+    }
+
+    @Test
+    fun `output relay never blocks on an empty pipe after the root exits`() {
+        val process = EmptyInheritedPipeProcess()
+        val relay = ProcessSupervisorMain.OutputRelay.start(process, true)
+
+        try {
+            assertTrue(relay.finish(100), "The relay waited for a descendant-held pipe")
+            assertFalse(process.readStarted.await(100, TimeUnit.MILLISECONDS))
+        } finally {
+            process.releaseRead.countDown()
+        }
+    }
+
+    @Test
+    fun `output relay drains a final chunk published with root exit`() {
+        val process = ExitTailPipeProcess()
+        val relay = ProcessSupervisorMain.OutputRelay.start(process, true)
+
+        assertTrue(relay.finish(100))
+        assertTrue(process.tailRead.get(), "The relay dropped the final root output")
+    }
+
+    @Test
+    fun `output relay timeout remains a failure after forced close`() {
+        val process = ForcedClosePipeProcess()
+        val relay = ProcessSupervisorMain.OutputRelay.start(process, true)
+
+        assertTrue(process.readStarted.await(1, TimeUnit.SECONDS))
+        assertFalse(relay.finish(50), "Forced output truncation was reported as success")
+    }
+
     private fun commandLine(root: Path, mainClass: String, vararg arguments: String): GeneralCommandLine =
         GeneralCommandLine(
             listOf(
                 java(),
+                testJavaClassPathArgument(root),
+                mainClass,
+            ) + arguments,
+        ).withWorkDirectory(root.toFile())
+
+    private fun jnaCommandLine(root: Path, mainClass: String, vararg arguments: String): GeneralCommandLine =
+        GeneralCommandLine(
+            listOf(
+                java(),
+                "--enable-native-access=ALL-UNNAMED",
+                "-Djna.boot.library.path=${System.getProperty("jna.boot.library.path")}",
+                "-Djna.nosys=true",
+                "-Djna.noclasspath=true",
                 testJavaClassPathArgument(root),
                 mainClass,
             ) + arguments,
@@ -228,6 +373,55 @@ private object WatchdogSleeper {
     }
 }
 
+private object InheritedOutputChildSpawner {
+    @JvmStatic
+    fun main(arguments: Array<String>) {
+        check(arguments.size == 2)
+        val java = ProcessHandle.current().info().command().orElseThrow()
+        val child = ProcessBuilder(
+            java,
+            arguments[1],
+            OutputHoldingSleeper::class.java.name,
+        ).inheritIO().start()
+        Files.writeString(Path.of(arguments[0]), child.pid().toString())
+        println("root finished")
+    }
+}
+
+private object OutputHoldingSleeper {
+    @JvmStatic
+    fun main(arguments: Array<String>) {
+        check(arguments.isEmpty())
+        Thread.sleep(60_000)
+    }
+}
+
+private object DifferentGroupChildSpawner {
+    @JvmStatic
+    fun main(arguments: Array<String>) {
+        check(arguments.size == 1)
+        check(PosixTest.INSTANCE.setpgid(0, 0) == 0)
+        val pid = ProcessHandle.current().pid()
+        Files.writeString(
+            Path.of(arguments[0]),
+            "$pid,${PosixTest.INSTANCE.getsid(0)},${PosixTest.INSTANCE.getpgid(0)}",
+        )
+        Thread.sleep(60_000)
+    }
+}
+
+private interface PosixTest : Library {
+    fun setpgid(pid: Int, pgid: Int): Int
+
+    fun getsid(pid: Int): Int
+
+    fun getpgid(pid: Int): Int
+
+    companion object {
+        val INSTANCE: PosixTest = Native.load(Platform.C_LIBRARY_NAME, PosixTest::class.java)
+    }
+}
+
 private class TestSupervisorProcess : Process() {
     private val alive = AtomicBoolean(true)
     private val terminated = CountDownLatch(1)
@@ -256,6 +450,107 @@ private class TestSupervisorProcess : Process() {
     override fun isAlive(): Boolean = alive.get()
 
     override fun pid(): Long = 0
+}
+
+private class EmptyInheritedPipeProcess : Process() {
+    val readStarted = CountDownLatch(1)
+    val releaseRead = CountDownLatch(1)
+    private val input = object : InputStream() {
+        override fun available(): Int = 0
+
+        override fun read(): Int {
+            readStarted.countDown()
+            releaseRead.await()
+            return -1
+        }
+
+        override fun close() = Unit
+    }
+
+    override fun getOutputStream(): OutputStream = ByteArrayOutputStream()
+
+    override fun getInputStream(): InputStream = input
+
+    override fun getErrorStream(): InputStream = input
+
+    override fun waitFor(): Int = 0
+
+    override fun waitFor(timeout: Long, unit: TimeUnit): Boolean = true
+
+    override fun exitValue(): Int = 0
+
+    override fun destroy() = Unit
+
+    override fun destroyForcibly(): Process = this
+
+    override fun isAlive(): Boolean = false
+}
+
+private class ExitTailPipeProcess : Process() {
+    val tailRead = AtomicBoolean()
+    private val exited = AtomicBoolean()
+    private val input = object : InputStream() {
+        override fun available(): Int = if (exited.get() && !tailRead.get()) 1 else 0
+
+        override fun read(): Int = if (tailRead.compareAndSet(false, true)) 'x'.code else -1
+    }
+
+    override fun getOutputStream(): OutputStream = ByteArrayOutputStream()
+
+    override fun getInputStream(): InputStream = input
+
+    override fun getErrorStream(): InputStream = ByteArrayInputStream(ByteArray(0))
+
+    override fun waitFor(): Int = 0
+
+    override fun waitFor(timeout: Long, unit: TimeUnit): Boolean = true
+
+    override fun exitValue(): Int = 0
+
+    override fun destroy() = Unit
+
+    override fun destroyForcibly(): Process = this
+
+    override fun isAlive(): Boolean {
+        exited.set(true)
+        return false
+    }
+}
+
+private class ForcedClosePipeProcess : Process() {
+    val readStarted = CountDownLatch(1)
+    private val closed = CountDownLatch(1)
+    private val input = object : InputStream() {
+        override fun available(): Int = 1
+
+        override fun read(): Int {
+            readStarted.countDown()
+            closed.await()
+            return -1
+        }
+
+        override fun close() {
+            closed.countDown()
+        }
+    }
+
+    override fun getOutputStream(): OutputStream = ByteArrayOutputStream()
+
+    override fun getInputStream(): InputStream = input
+
+    override fun getErrorStream(): InputStream = ByteArrayInputStream(ByteArray(0))
+
+    override fun waitFor(): Int = 0
+
+    override fun waitFor(timeout: Long, unit: TimeUnit): Boolean = true
+
+    override fun exitValue(): Int = 0
+
+    override fun destroy() = Unit
+
+    override fun destroyForcibly(): Process = this
+
+    override fun isAlive(): Boolean = true
 }
 
 internal fun testJavaClassPathArgument(directory: Path): String {
